// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar rendering Renders toolbar with disabled drawer when there are no items 1`] = `
<div>
  <aside class="navigation-drawer navigation-drawer--close navigation-drawer--fixed navigation-drawer--floating" style="height: 100%; margin-top: 0px; max-height: calc(100% - 0px); width: 300px;">
    <!---->
    <div class="navigation-drawer__border"></div>
  </aside>
  <nav class="toolbar toolbar--fixed" style="margin-top: 0px; padding-right: 0px; padding-left: 0px;">
    <div class="toolbar__content" style="height: 56px;">
      <button disabled="disabled" type="button" class="toolbar__side-icon btn btn--disabled btn--icon">
        <div class="btn__content">
          <i aria-hidden="true" class="icon material-icons">menu</i>
        </div>
      </button>
      <div class="toolbar__title">
        <!---->
      </div>
    </div>
  </nav>
</div>
`;

exports[`Toolbar rendering Renders toolbar with enabled drawer when there are items 1`] = `
<div>
  <aside class="navigation-drawer navigation-drawer--close navigation-drawer--fixed navigation-drawer--floating" style="height: 100%; margin-top: 0px; max-height: calc(100% - 0px); width: 300px;">
    <!---->
    <div class="navigation-drawer__border"></div>
  </aside>
  <nav class="toolbar toolbar--fixed" style="margin-top: 0px; padding-right: 0px; padding-left: 0px;">
    <div class="toolbar__content" style="height: 56px;">
      <button type="button" class="toolbar__side-icon btn btn--icon">
        <div class="btn__content">
          <i aria-hidden="true" class="icon material-icons">menu</i>
        </div>
      </button>
      <div class="toolbar__title">
        <!---->
      </div>
    </div>
  </nav>
</div>
`;
